added add and subtract functionality

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
           <p style="text-decoration: line-through; color: grey; font-weight: 700;">$250.00</p>
 
           <div class="add">
-            <div class="minus"><img src="images/icon-minus.svg" alt=""></div>
-            <p class="amount" id="amount">0</p>
-            <div><img src="images/icon-plus.svg" alt=""></div>
+            <div class="minus" id="minus"><img src="images/icon-minus.svg" alt=""></div>
+            <p class="amount" id="amount"></p>
+            <div><img src="images/icon-plus.svg" alt="" id="add"></div>
             <button>Add to cart</button>
           </div>
         </div>
