--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
+
+      <div class="right-area">
+        <img src="images/icon-cart.svg" alt="cart" class="cart">
+        <img src="images/image-avatar.png" alt="profile-image" class="profile">
+      </div>
     </nav>
 
     <main>
@@ -74,7 +79,7 @@
           <p style="text-decoration: line-through; color: grey; font-weight: 700;">$250.00</p>
 
           <div class="add">
-            <div class="minus" id="minus"><img src="images/icon-minus.svg" alt=""></div>
+            <div class="minus" id="minus"><img src="images/icon-minus.svg" alt="" class="subtract"></div>
             <p class="amount" id="amount"></p>
             <div><img src="images/icon-plus.svg" alt="" id="add"></div>
             <button>Add to cart</button>
