--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <body>
     <nav>
       <div class="img">
-        <img src="./images/logo.svg" alt="" />
+        <img src="images/icon-menu.svg" alt="" class="menu">
+        <img src="./images/logo.svg" alt="" class="logo"/>
       </div>
       <div>
         <ul>
@@ -76,7 +77,7 @@
             <p class="percentage">50%</p>
           </div>
 
-          <p style="text-decoration: line-through; color: grey; font-weight: 700;">$250.00</p>
+          <p style="text-decoration: line-through; color: grey; font-weight: 700;" class="original">$250.00</p>
 
           <div class="add">
             <div class="minus" id="minus"><img src="images/icon-minus.svg" alt="" class="subtract"></div>
