--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
           <p style="text-decoration: line-through; color: grey; font-weight: 700;" class="original">$250.00</p>
 
           <div class="add">
-            <div class="minus" id="minus"><img src="images/icon-minus.svg" alt="" class="subtract"></div>
-            <p class="amount" id="amount"></p>
-            <div><img src="images/icon-plus.svg" alt="" id="add"></div>
+            <div class="amount-buttons">
+              <div class="minus" id="minus"><img src="images/icon-minus.svg" alt="" class="subtract"></div>
+              <p class="amount" id="amount"></p>
+              <div class="add-btn"><img src="images/icon-plus.svg" alt="" id="add"></div>
+            </div>
             <button>Add to cart</button>
           </div>
         </div>
